--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
-@charset "UTF-8";
-@import url(font-awesome.min.css);
-@import url("http://fonts.googleapis.com/css?family=Roboto:500,300");
 
-/*
-	Ion by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
-*/
 
 /* Basic */
 
@@ -254,7 +246,7 @@
 	}
 
 		.select-wrapper:before {
-			content: "ï¸";
+			content: "ƒè";
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
 			font-family: FontAwesome;
@@ -394,24 +386,7 @@
 
 /* Box */
 
-	.box {
-		border-radius: 6px;
-		border: solid 1px rgba(144, 144, 144, 0.25);
-		margin-bottom: 2em;
-		padding: 3em 2em;
-	}
-
-		.box > :last-child,
-		.box > :last-child > :last-child,
-		.box > :last-child > :last-child > :last-child {
-			margin-bottom: 0;
-		}
-
-		.box.alt {
-			border: 0;
-			border-radius: 0;
-			padding: 0;
-		}
+	
 
 /* Icon */
 
@@ -1146,16 +1121,9 @@
 	  
 	 .form-group {
 	  position: relative;
-	  margin-bottom: 25px;
+	  margin-bottom: 40px;
 	  overflow: hidden; }
 	  .form-group:last-child {
-		margin-bottom: 0px; }
-	
-	.foghe {
-	  position: relative;
-	  margin-bottom: 25px;
-	  overflow: hidden; }
-	.foghe:last-child {
 		margin-bottom: 0px; }
 	figure {
 	  margin-bottom: 20px;
