--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@
 		border-radius: 6px;
 		border: none;
 		border: solid 1px rgba(144, 144, 144, 0.25);
-		color: #000000;
+		color: inherit;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
@@ -474,7 +474,7 @@
 
 	ul {
 		list-style: disc;
-		/*margin: 0 0 2em 0;*/
+		margin: 0 0 2em 0;
 		padding-left: 1em;
 	}
 
@@ -1121,10 +1121,10 @@
 	  
 	 .form-group {
 	  position: relative;
-	  margin-bottom: 10px;
+	  margin-bottom: 40px;
 	  overflow: hidden; }
 	  .form-group:last-child {
-		margin-bottom: 5px; }
+		margin-bottom: 0px; }
 	figure {
 	  margin-bottom: 20px;
 	  text-align: center; }
@@ -1152,7 +1152,6 @@
 	}
 	.messages{
 	  color: #dc3545
-
 	  
 	}
 
