--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@
 		border-radius: 6px;
 		border: none;
 		border: solid 1px rgba(144, 144, 144, 0.25);
-		color: inherit;
+		color: #000000;
 		display: block;
 		outline: 0;
 		padding: 0 1em;
@@ -474,7 +474,7 @@
 
 	ul {
 		list-style: disc;
-		margin: 0 0 2em 0;
+		/*margin: 0 0 2em 0;*/
 		padding-left: 1em;
 	}
 
@@ -1121,7 +1121,8 @@
 	  
 	 .form-group {
 	  position: relative;
-	  margin-bottom: 40px;
+	  margin-bottom: 5px;
+	  height:80px;
 	  overflow: hidden; }
 	  .form-group:last-child {
 		margin-bottom: 0px; }
@@ -1152,6 +1153,7 @@
 	}
 	.messages{
 	  color: #dc3545
+
 	  
 	}
 
